[gd_scene load_steps=7 format=3 uid="uid://dyl0pe6kqksw3"]

[ext_resource type="Script" path="res://main.gd" id="1_rrkik"]
[ext_resource type="PackedScene" uid="uid://couhv4h8umrc7" path="res://player.tscn" id="2_jrhgi"]
[ext_resource type="Texture2D" uid="uid://eos4yb6buaxr" path="res://icon.svg" id="2_mcqon"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_85bkh"]
friction = 0.0
bounce = 0.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7grsg"]

[sub_resource type="QuadMesh" id="QuadMesh_b37v0"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_rrkik")

[node name="CharacterBody2DP1" parent="." instance=ExtResource("2_jrhgi")]
position = Vector2(-800, 0)

[node name="CharacterBody2DP2" parent="." instance=ExtResource("2_jrhgi")]
position = Vector2(800, 0)

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(-329, 253)
texture = ExtResource("2_mcqon")

[node name="Icon2" type="Sprite2D" parent="."]
position = Vector2(451, 372)
texture = ExtResource("2_mcqon")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(0, -150)
collision_layer = 3
physics_material_override = SubResource("PhysicsMaterial_85bkh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 500)
scale = Vector2(100, 5)
shape = SubResource("RectangleShape2D_7grsg")

[node name="MeshInstance2D" type="MeshInstance2D" parent="StaticBody2D"]
position = Vector2(0, 500)
scale = Vector2(2000, 100)
mesh = SubResource("QuadMesh_b37v0")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
scale = Vector2(2, 2)

[node name="commandInputP1" type="LineEdit" parent="Control"]
layout_mode = 0
offset_left = -574.0
offset_top = -322.0
offset_right = -213.0
offset_bottom = -282.0
metadata/_edit_use_anchors_ = true

[node name="commandInputP2" type="LineEdit" parent="Control"]
layout_mode = 0
offset_left = 212.0
offset_top = -322.0
offset_right = 573.0
offset_bottom = -282.0
size_flags_horizontal = 0
size_flags_vertical = 0
